<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PvPdotnetChat</string>
    <string name="action_settings">Settings</string>
    <string name="textViewAccountLogin">Account Login</string>
    <string name="textViewUsername">Username</string>
    <string name="textViewPassword">Password</string>
    <string name="checkBoxRememberMe">Remember me</string>
    <string name="buttonLogIn">Log in</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="textViewServer">Server</string>
    <string name="radioButtonNA">NA</string>
    <string name="radioButtonEUW">EUW</string>
    <string name="radioButtonEUNE">EUNE</string>
    <string name="logoContentDescription">League of Legends Logo</string>
    <string name="textViewSummoner">Summoner</string>
    <string name="textViewStatus">(status)</string>
    <string name="summonerIcon">Summoner Icon</string>
    <string name="availabilityIcon">Availability Icon</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="hello_world">Hello world!</string>
    <string name="textViewExpanded">-</string>
    <string name="textViewGroupName">Group</string>
    <string name="textViewGroupCount">(0/200)</string>

</resources>
