<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/transparent"
        android:layout_marginBottom="20dp">
    </View>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:fadeScrollbars="false">

        <TextView
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/textViewExpanded"
            android:id="@+id/textViewExpandable"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textColor="#ff5b5b5b"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textViewGroupName"
            android:id="@+id/textViewGroupName"
            android:layout_toRightOf="@id/textViewExpandable"
            android:layout_toEndOf="@id/textViewExpandable"
            android:textColor="#ff5b5b5b"
            android:textStyle="bold"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/textViewGroupCount"
            android:id="@+id/textViewGroupCount"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#ff5b5b5b"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentBottom="false"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ff1c1c1c"
        android:fadingEdge="horizontal"
        android:fadingEdgeLength="10dp"
        android:fadeScrollbars="true">
    </View>

</LinearLayout>